Allow SSH to be more easily configured

--- a/Procfile.erb
+++ b/Procfile.erb
@@ -49,7 +49,7 @@ registry: exec support/docker-registry
 
 # Additional services
 #
-#sshd: exec <%= config.sshd.bin %> -e -D -f <%= config.gdk_root %>/openssh/sshd_config
+<%= '#' unless config.sshd? %>sshd: exec <%= config.sshd.bin %> -e -D -f <%= config.gdk_root %>/openssh/sshd_config
 <%= '#' unless config.nginx? %>nginx: exec <%= config.nginx.bin %> -p <%= config.gdk_root %>/nginx -c conf/nginx.conf
 #elasticsearch: exec elasticsearch/bin/elasticsearch
 
