--- a/support/templates/gitlab.yml.erb
+++ b/support/templates/gitlab.yml.erb
@@ -697,8 +697,8 @@ production: &base
     upload_pack: true
     receive_pack: true
 
-    ssh_port: 2222
-    ssh_host: localhost
+    ssh_port: <%= config.sshd.port %>
+    ssh_host: <%= config.sshd.host %>
 
   workhorse:
     # File that contains the secret key for verifying access for gitlab-workhorse.
