configure resque for redis-sentinel

--- a/support/templates/resque.yml.erb
+++ b/support/templates/resque.yml.erb
@@ -1,2 +1,5 @@
-development: unix:<%= config.redis_socket %>
+development:
+  url: redis://redis
+  sentinels:
+  - { host: 127.0.0.1, port: 26380 }
 test: unix:<%= config.redis_socket %>
