--- a/Procfile.erb
+++ b/Procfile.erb
@@ -36,8 +36,8 @@ gitaly: exec gitaly/gitaly <%= config.gitaly.config_file %>
 
 # Frontend services
 #
-webpack: exec /usr/bin/env NODE_ENV=development DEV_SERVER_PORT=<%= config.webpack.port %> DEV_SERVER_HOST=<%= config.webpack.host %> support/exec-cd gitlab yarn dev-server
-rails-web: exec /usr/bin/env RAILS_ENV=development RAILS_RELATIVE_URL_ROOT=$relative_url_root support/exec-cd gitlab bin/web start_foreground
+webpack: exec /usr/bin/env NODE_ENV=development DEV_SERVER_PORT=<%= config.webpack.port %> DEV_SERVER_HOST=<%= config.webpack.host %> support/exec-cd gitlab yarn dev-server --client-log-level debug
+rails-web: exec /usr/bin/env RAILS_ENV=development RAILS_RELATIVE_URL_ROOT=$relative_url_root GITLAB_REDIS_CACHE_READ_REPLICA_ENABLED=true support/exec-cd gitlab bin/web start_foreground
 <%= '#' unless config.gitlab_pages? %>gitlab-pages: exec gitlab-pages/bin/gitlab-pages -listen-http ":<%= config.gitlab_pages.port %>" -artifacts-server <%= config.__uri.merge('api/v4') %> -pages-root <%= config.gdk_root.join('gitlab', 'shared', 'pages') %> -pages-domain 127.0.0.1.xip.io
 
 # Docker
