Support not running webpack server
When webpack.enabled = false, the webpack service
is not run, instead, a new service called
webpack-static-builder is executed which simply
runs `yarn webpack` and sleeps.

--- a/support/templates/gitlab.yml.erb
+++ b/support/templates/gitlab.yml.erb
@@ -751,7 +751,7 @@ production: &base
   ## Webpack settings
   webpack:
     dev_server:
-      enabled: true
+      enabled: <%= config.webpack? %>
       host: <%= config.webpack.host %>
       port: <%= config.webpack.port %>
 
