redis cluster proof-of-concept

--- a/Procfile.erb
+++ b/Procfile.erb
@@ -9,7 +9,9 @@ redis: exec redis-server <%= config.gdk_root.join('redis', 'redis.conf') %>
 redis-01: exec redis-server <%= config.gdk_root.join('redis', 'redis-01.conf') %>
 redis-02: exec redis-server <%= config.gdk_root.join('redis', 'redis-02.conf') %>
 redis-03: exec redis-server <%= config.gdk_root.join('redis', 'redis-03.conf') %>
-redis-sentinel: exec redis-sentinel <%= config.gdk_root.join('redis', 'redis-sentinel.conf') %>
+redis-04: exec redis-server <%= config.gdk_root.join('redis', 'redis-04.conf') %>
+redis-05: exec redis-server <%= config.gdk_root.join('redis', 'redis-05.conf') %>
+redis-06: exec redis-server <%= config.gdk_root.join('redis', 'redis-06.conf') %>
 <%= '#' unless config.object_store? %>minio: exec env MINIO_REGION=gdk MINIO_ACCESS_KEY=minio MINIO_SECRET_KEY=gdk-minio minio server -C minio/config --address "<%= config.hostname %>:<%= config.object_store.port %>" --compat minio/data
 postgresql: exec support/postgresql-signal-wrapper <%= config.postgresql.bin %> -D <%= config.postgresql.data_dir %> -k <%= config.postgresql.dir %> -h ''
 <%= '#' unless config.postgresql.replica? %>postgresql-replica: exec support/postgresql-signal-wrapper <%= config.postgresql.bin %> -D <%= config.postgresql.replica_dir.join('data') %> -k <%= config.postgresql.replica_dir %> -h ''
