Add gitlab-ui repository setting

--- a/support/templates/gdk-config.mk.erb
+++ b/support/templates/gdk-config.mk.erb
@@ -17,6 +17,8 @@ gitlab_pages_port = <%= config.gitlab_pages.port %>
 gitlab_pages_repo = <%= config.repositories.gitlab_pages %>
 gitlab_repo = <%= config.repositories.gitlab %>
 gitlab_shell_repo = <%= config.repositories.gitlab_shell %>
+gitlab_ui_enabled = <%= config.gitlab_ui? %>
+gitlab_ui_repo = <%= config.repositories.gitlab_ui %>
 gitlab_workhorse_repo = <%= config.repositories.gitlab_workhorse %>
 grafana_enabled = <%= config.grafana.enabled? %>
 hostname = <%= config.hostname %>
