--- a/support/templates/gitlab.yml.erb
+++ b/support/templates/gitlab.yml.erb
@@ -792,8 +792,11 @@ production: &base
 
   ## ActionCable settings
   action_cable:
+    # Enables handling of ActionCable requests on the Puma web workers
+    # When this is disabled, a standalone ActionCable server must be started
+    in_app: <%= config.action_cable.in_app? %>
     # Number of threads used to process ActionCable connection callbacks and channel actions
-    # worker_pool_size: 4
+    worker_pool_size: <%= config.action_cable.worker_pool_size %>
 
   ## Monitoring
   # Built in monitoring settings
