--- a/support/templates/gitlab.yml.erb
+++ b/support/templates/gitlab.yml.erb
@@ -270,7 +270,7 @@ production: &base
   pages:
     enabled: true
     access_control: false
-    host: <% config.gitlab_pages.domain %>
+    hostname: <% config.gitlab_pages.hostname %>
     port: <%= config.gitlab_pages.port %>
     https: false # Set to true if you serve the pages with HTTPS
     artifacts_server: true
