Few improvement to run GDK in the cloud
Use listen address instead of hostname in some places because the hostname
address might be bound to an IP that the machine in the cloud might not have
direct access to. So the cloud computer will set `0.0.0.0` as listen address,
while the hostname is some domain that will resolve to a public IP on the
interwebs.

--- a/support/templates/gitlab.yml.erb
+++ b/support/templates/gitlab.yml.erb
@@ -772,7 +772,7 @@ production: &base
     receive_pack: true
 
     ssh_port: <%= config.sshd.listen_port %>
-    ssh_host: <%= config.sshd.listen_address %>
+    ssh_host: <%= config.hostname %>
 
   workhorse:
     # File that contains the secret key for verifying access for gitlab-workhorse.
