--- a/support/templates/prometheus.yml.erb
+++ b/support/templates/prometheus.yml.erb
@@ -8,28 +8,28 @@ global:
     monitor: 'gdk-monitor'
 
 # A scrape configuration containing four endpoints to scrape. Requires that
-# `gdk.test` is configured. See doc/index.md#set-up-gdktest-hostname for more
+# `<%= config.hostname %>` is configured. See doc/index.md#set-up-gdktest-hostname for more
 # information.
 scrape_configs:
   # The job name is added as a label `job=<job_name>` to any timeseries scraped
   # from this configuration.
   - job_name: 'prometheus'
     static_configs:
-      - targets: ['gdk.test:9090']
+      - targets: ['<%= config.hostname %>:<%= config.prometheus.port %>']
   - job_name: 'gitlab'
     scrape_interval: 30s
     metrics_path: '/-/metrics'
     static_configs:
-      - targets: ['gdk.test:3000']
+      - targets: ['<%= config.hostname %>:<%= config.port %>']
   # Requires that `prometheus_listen_addr` in `gitaly/gitaly-0.praefect.toml` is
   # uncommented.
   - job_name: 'gitaly'
     scrape_interval: 5s
     static_configs:
-      - targets: ['gdk.test:9236']
+      - targets: ['<%= config.hostname %>:<%= config.prometheus.gitaly_exporter_port %>']
   # Requires that `prometheus_listen_addr` in `gitaly/praefect.config.toml` is
   # uncommented.
   - job_name: 'praefect'
     scrape_interval: 5s
     static_configs:
-      - targets: ['gdk.test:10101']
+      - targets: ['<%= config.hostname %>:<%= config.prometheus.praefect_exporter_port %>']
