Added port configuration for praefect database

--- a/support/templates/praefect.config.toml.erb
+++ b/support/templates/praefect.config.toml.erb
@@ -33,5 +33,6 @@ name = 'default'
 
 [database]
 host = "<%= config.praefect.database.host %>"
+port = <%= config.praefect.database.port %>
 dbname = "<%= config.praefect.database.dbname %>"
 sslmode = "<%= config.praefect.database.sslmode %>"
