--- a/support/templates/gdk-config.mk.erb
+++ b/support/templates/gdk-config.mk.erb
@@ -14,6 +14,8 @@ gitlab_docs_repo = <%= config.repositories.gitlab_docs %>
 gitlab_elasticsearch_indexer_repo = <%= config.repositories.gitlab_elasticsearch_indexer %>
 gitlab_pages_port = <%= config.gitlab_pages.port %>
 gitlab_pages_repo = <%= config.repositories.gitlab_pages %>
+gitlab_k8s_agent_enabled = <%= config.gitlab_k8s_agent? %>
+gitlab_k8s_agent_repo = <%= config.repositories.gitlab_k8s_agent %>
 gitlab_repo = <%= config.repositories.gitlab %>
 gitlab_shell_repo = <%= config.repositories.gitlab_shell %>
 gitlab_workhorse_repo = <%= config.repositories.gitlab_workhorse %>
