--- a/support/templates/nginx/conf/nginx.conf.erb
+++ b/support/templates/nginx/conf/nginx.conf.erb
@@ -29,8 +29,18 @@ http {
   client_max_body_size 0;
 
   upstream gitlab-workhorse {
-    server <%= config.workhorse.__active_host %>:<%= config.workhorse.__active_port %> fail_timeout=0;
+    server <%= config.workhorse.__listen_address %> fail_timeout=0;
   }
+
+<%- if config.gitlab_k8s_agent? -%>
+  upstream gitlab-k8s-agent {
+    <%- if config.gitlab_k8s_agent.listen_network == 'unix' -%>
+    server unix:<%= config.gitlab_k8s_agent.listen_address %> fail_timeout=0;
+    <%- else -%>
+    server <%= config.gitlab_k8s_agent.listen_address %> fail_timeout=0;
+    <%- end -%>
+  }
+<%- end -%>
 
   map $http_upgrade $connection_upgrade {
     default upgrade;
@@ -38,7 +48,7 @@ http {
   }
 
   server {
-    listen <%= config.nginx.listen %>:<%= config.port %><%= ' ssl' if config.https? %><%= ' http2' if config.https? && config.nginx.http2? %>;
+    listen <%= config.nginx.__listen_address %><%= ' ssl' if config.https? %><%= ' http2' if config.https? && config.nginx.http2? %>;
 <%- if config.https? -%>
 
     ssl_certificate <%= config.gdk_root.join(config.nginx.ssl.certificate) %>;
@@ -53,10 +63,27 @@ http {
       proxy_set_header    Upgrade             $http_upgrade;
       proxy_set_header    Connection          $connection_upgrade;
 
+      proxy_http_version 1.1;
       proxy_read_timeout 300;
 
       proxy_pass http://gitlab-workhorse;
     }
+<%- if config.gitlab_k8s_agent? -%>
+
+    location = <%= config.gitlab_k8s_agent.__listen_url_path %> {
+      proxy_set_header    Host                $http_host;
+      proxy_set_header    X-Real-IP           $remote_addr;
+      proxy_set_header    X-Forwarded-For     $proxy_add_x_forwarded_for;
+      proxy_set_header    X-Forwarded-Proto   $scheme;
+      proxy_set_header    Upgrade             $http_upgrade;
+      proxy_set_header    Connection          $connection_upgrade;
+
+      proxy_http_version 1.1;
+      proxy_read_timeout 300;
+
+      proxy_pass http://gitlab-k8s-agent;
+    }
+<%- end -%>
   }
 <%- if config.https? -%>
 
