Include prometheus section in gitlab.yml

--- a/support/templates/gitlab.yml.erb
+++ b/support/templates/gitlab.yml.erb
@@ -811,7 +811,9 @@ production: &base
     #  enabled: true
     #  address: localhost
     #  port: 3807
-
+  prometheus:
+    enable: <%= config.prometheus.enabled? %>
+    listen_address: '<%= config.hostname %>:<%= config.prometheus.port %>'
   #
   # 5. Extra customization
   # ==========================
