Allow platform to be accessed in Makefile

--- a/support/templates/gdk-config.mk.erb
+++ b/support/templates/gdk-config.mk.erb
@@ -21,6 +21,7 @@ hostname = <%= config.hostname %>
 https = <%= config.https? %>
 jaeger_server_enabled = <%= config.tracer.jaeger? %>
 jaeger_version = <%= config.tracer.jaeger.version %>
+platform = <%= config.__platform %>
 port = <%= config.port %>
 postgresql_host = <%= config.postgresql.host %>
 postgresql_bin_dir = <%= config.postgresql.bin_dir %>
