Allow gitaly and praefect to run at the same time

--- a/support/templates/Procfile.erb
+++ b/support/templates/Procfile.erb
@@ -25,7 +25,8 @@ praefect: exec gitaly/praefect -config <%= config.praefect.config_file %>
 <% config.praefect.__nodes.each_with_index do |praefect_node, index| -%>
 <%= praefect_node.service_name %>: exec gitaly/gitaly <%=config.gdk_root.join(praefect_node.config_file) %>
 <% end -%>
-<% else -%>
+<% end -%>
+<% if config.gitaly? -%>
 gitaly: exec gitaly/gitaly <%= config.gitaly.config_file %>
 <% end -%>
 
