Set prometheus_listen_addr when enabled
This automaitcally uncomments the prometheus listen addresses for
praefect and gitaly when prometheus is enabled. Making sure scraping
works out of the box.

--- a/support/templates/gitaly.config.toml.erb
+++ b/support/templates/gitaly.config.toml.erb
@@ -12,7 +12,7 @@ internal_socket_dir = "<%= node.internal_socket_dir %>"
 # tls_listen_addr = "<%= config.hostname %>:8888
 
 # # Optional: export metrics via Prometheus
-# prometheus_listen_addr = "<%= config.hostname %>:<%= config.prometheus.gitaly_exporter_port %>"
+<%= '#' unless config.prometheus.enabled? %>prometheus_listen_addr = "<%= config.hostname %>:<%= config.prometheus.gitaly_exporter_port %>"
 
 # # Optional: authenticate Gitaly requests using a shared secret
 # [auth]
