--- a/support/templates/gitlab.yml.erb
+++ b/support/templates/gitlab.yml.erb
@@ -807,7 +807,7 @@ production: &base
       address: <%= config.hostname %>
       port: <%= config.prometheus.sidekiq_exporter_port %>
   prometheus:
-    enable: <%= config.prometheus.enabled? %>
+    enable: <%= config.prometheus? %>
     listen_address: '<%= config.hostname %>:<%= config.prometheus.port %>'
   #
   # 5. Extra customization
