Use host.docker.internal for prometheus by default

--- a/support/templates/prometheus.yml.erb
+++ b/support/templates/prometheus.yml.erb
@@ -7,30 +7,28 @@ global:
   external_labels:
     monitor: 'gdk-monitor'
 
-# A scrape configuration containing four endpoints to scrape. Requires that
-# `<%= config.hostname %>` is configured. See doc/index.md#set-up-gdktest-hostname for more
-# information.
+# Scrape configuration
 scrape_configs:
   # The job name is added as a label `job=<job_name>` to any timeseries scraped
   # from this configuration.
   - job_name: 'prometheus'
     static_configs:
-      - targets: ['<%= config.hostname %>:<%= config.prometheus.port %>']
+      - targets: ['<%= config.prometheus.scrape_host %>:<%= config.prometheus.port %>']
   - job_name: 'gitlab'
     scrape_interval: 30s
     metrics_path: '/-/metrics'
     static_configs:
-      - targets: ['<%= config.hostname %>:<%= config.port %>']
+      - targets: ['<%= config.prometheus.scrape_host %>:<%= config.port %>']
   - job_name: 'gitaly'
     scrape_interval: 5s
     static_configs:
-      - targets: ['<%= config.hostname %>:<%= config.prometheus.gitaly_exporter_port %>']
+      - targets: ['<%= config.prometheus.scrape_host %>:<%= config.prometheus.gitaly_exporter_port %>']
   - job_name: 'praefect'
     scrape_interval: 5s
     static_configs:
-      - targets: ['<%= config.hostname %>:<%= config.prometheus.praefect_exporter_port %>']
+      - targets: ['<%= config.prometheus.scrape_host %>:<%= config.prometheus.praefect_exporter_port %>']
   - job_name: 'gitlab-sidekiq'
     scrape_interval: 30s
     metrics_path: '/metrics'
     static_configs:
-      - targets: ['<%= config.hostname %>:<%= config.prometheus.sidekiq_exporter_port %>']
+      - targets: ['<%= config.prometheus.scrape_host %>:<%= config.prometheus.sidekiq_exporter_port %>']
