Support prometheus with multi node praefect

--- a/support/templates/prometheus.yml.erb
+++ b/support/templates/prometheus.yml.erb
@@ -19,14 +19,19 @@ scrape_configs:
     metrics_path: '/-/metrics'
     static_configs:
       - targets: ['<%= config.prometheus.scrape_host %>:<%= config.port %>']
+  <%- if config.praefect? -%>
+  - job_name: 'praefect-gitaly'
+    scrape_interval: 5s
+    static_configs:
+      <%- config.praefect.__nodes.each do |node| -%>
+      - targets: ['<%= node.prometheus_target %>']
+      <%- end -%>
+  <%- else -%>
   - job_name: 'gitaly'
     scrape_interval: 5s
     static_configs:
       - targets: ['<%= config.prometheus.scrape_host %>:<%= config.prometheus.gitaly_exporter_port %>']
-  - job_name: 'praefect'
-    scrape_interval: 5s
-    static_configs:
-      - targets: ['<%= config.prometheus.scrape_host %>:<%= config.prometheus.praefect_exporter_port %>']
+  <%- end -%>
   - job_name: 'gitlab-sidekiq'
     scrape_interval: 30s
     metrics_path: '/metrics'
