Remove personal setting from the template

--- a/support/templates/gitlab-pages.conf.erb
+++ b/support/templates/gitlab-pages.conf.erb
@@ -6,5 +6,5 @@ pages-domain=<%= config.gitlab_pages.host %>
 #auth-client-secret=TBD
 #auth-redirect-uri=TBD
 #auth-secret=TBD
-#gitlab-server=https://22878.qa-tunnel.gitlab.info
+#gitlab-server=TBD
 log-verbose=TBD %>
