Disable load balancing by default for now
Right now the Rails autoloader doesn't work properly when load balancing
is enabled. The middleware is configured in the initializers, but when
the autoloader redefines the middleware these settings are lost.

--- a/support/templates/database.yml.erb
+++ b/support/templates/database.yml.erb
@@ -5,10 +5,12 @@ development:
   host: <%= config.postgresql.host %>
   port: <%= config.postgresql.port %>
   pool: 10
-<%- unless config.geo? -%>
+<%- if config.load_balancing.enabled -%>
+  <%- unless config.geo? -%>
   load_balancing:
     hosts:
       - <%= config.postgresql.host %>
+  <%- end -%>
 <%- end -%>
 
 test: &test
