--- a/support/templates/gitlab-pages.conf.erb
+++ b/support/templates/gitlab-pages.conf.erb
@@ -2,3 +2,4 @@ listen-http=:<%= config.gitlab_pages.port %>
 artifacts-server=<%= config.__uri.merge('api/v4') %>
 pages-root=<%= config.gdk_root.join('gitlab', 'shared', 'pages') %>
 pages-domain=<%= config.gitlab_pages.host %>
+api-secret-key=<%= config.gitlab_pages.secret_file %>
