Update gitlab.yml template terrform.remote_directory to match upstream
See https://gitlab.com/gitlab-org/gitlab/-/commit/40dc47c671c353ec3222d6d152f6a71f9e970224

--- a/support/templates/gitlab.yml.erb
+++ b/support/templates/gitlab.yml.erb
@@ -257,7 +257,7 @@ production: &base
     enabled: true
     object_store:
       enabled: <%= config.object_store? %>
-      remote_directory: terraform_state
+      remote_directory: terraform
       connection:
         provider: AWS
         aws_access_key_id: minio
@@ -914,7 +914,7 @@ test:
     storage_path: tmp/tests/terraform_state
     object_store:
       enabled: false
-      remote_directory: terraform_state
+      remote_directory: terraform
       connection:
         provider: AWS # Only AWS supported at the moment
         aws_access_key_id: AWS_ACCESS_KEY_ID
