Add verbose flag to pages config

--- a/support/templates/gitlab-pages.conf.erb
+++ b/support/templates/gitlab-pages.conf.erb
@@ -3,3 +3,4 @@ artifacts-server=<%= config.__uri.merge('api/v4') %>
 pages-root=<%= config.gdk_root.join('gitlab', 'shared', 'pages') %>
 pages-domain=<%= config.gitlab_pages.host %>
 api-secret-key=<%= config.gitlab_pages.secret_file %>
+log-verbose=<%= config.gitlab_pages.verbose %>
