Support config.__architecture

--- a/support/templates/gdk-config.mk.erb
+++ b/support/templates/gdk-config.mk.erb
@@ -1,3 +1,4 @@
+architecture = <%= config.__architecture %>
 auto_devops_enabled = <%= config.auto_devops.enabled %>
 auto_devops_gitlab_port = <%= config.auto_devops.gitlab.port %>
 auto_devops_registry_port = <%= config.auto_devops.registry.port %>
