Configure statement timeout
This is a follow-up to https://gitlab.com/gitlab-org/gitlab/-/merge_requests/42692 and https://gitlab.com/gitlab-org/gitlab/-/issues/251084.

We specify a statement timeout by default in gdk, as this is something we should expect to have in a production environment.

--- a/support/templates/database.yml.erb
+++ b/support/templates/database.yml.erb
@@ -5,6 +5,8 @@ development:
   host: <%= config.postgresql.host %>
   port: <%= config.postgresql.port %>
   pool: 10
+  variables:
+    statement_timeout: 15s
 <%- if config.load_balancing.enabled -%>
   <%- unless config.geo? -%>
   load_balancing:
@@ -20,3 +22,5 @@ test: &test
   host: <%= config.postgresql.host %>
   port: <%= config.postgresql.port %>
   pool: 10
+  variables:
+    statement_timeout: 15s
