Enable JSON logging for Gitaly

--- a/support/templates/gitaly.config.toml.erb
+++ b/support/templates/gitaly.config.toml.erb
@@ -52,7 +52,7 @@ path = "<%= node.storage_dir %>"
 #
 
 # # You can optionally configure Gitaly to output JSON-formatted log messages to stdout
-# [logging]
+[logging]
 # # Optional: Set log level to only log entries with that severity or above
 # # One of, in order: debug, info, warn, errror, fatal, panic
 # # Defaults to "info"
