Apply 1 suggestion(s) to 1 file(s)

--- a/support/templates/gitlab.yml.erb
+++ b/support/templates/gitlab.yml.erb
@@ -949,7 +949,7 @@ test:
     path: tmp/tests/pages
     object_store:
       enabled: false
-      remote_directory: terraform
+      remote_directory: pages
       connection:
         provider: AWS # Only AWS supported at the moment
         aws_access_key_id: AWS_ACCESS_KEY_ID
