--- a/support/templates/gitlab.yml.erb
+++ b/support/templates/gitlab.yml.erb
@@ -279,6 +279,16 @@ production: &base
     admin:
       address: unix:<%= config.gdk_root %>/gitlab/tmp/sockets/private/pages-admin.socket # TCP connections are supported too (e.g. tcp://host:port)
     secret_file: <%= config.gitlab_pages.secret_file %>
+    object_store:
+      enabled: <%= config.object_store? %>
+      remote_directory: pages # The bucket name
+      connection:
+        provider: AWS
+        aws_access_key_id: minio
+        aws_secret_access_key: gdk-minio
+        region: gdk
+        endpoint: 'http://<%= config.object_store.host %>:<%= config.object_store.port %>'
+        path_style: true
 
   ## Mattermost
   ## For enabling Add to Mattermost button
@@ -937,6 +947,14 @@ test:
 
   pages:
     path: tmp/tests/pages
+    object_store:
+      enabled: false
+      remote_directory: pages
+      connection:
+        provider: AWS # Only AWS supported at the moment
+        aws_access_key_id: AWS_ACCESS_KEY_ID
+        aws_secret_access_key: AWS_SECRET_ACCESS_KEY
+        region: us-east-1
   repositories:
     storages:
       default:
