Fix relative URL root support for Gitaly
Prior to https://gitlab.com/gitlab-org/gitaly/-/merge_requests/2485,
Gitaly hooks did not work properly with configurations that used a
relative URL root. Now that it is working, add the config support
necessary for this to work.

Relates to https://gitlab.com/gitlab-org/gitlab/-/issues/258833

--- a/support/templates/gitaly.config.toml.erb
+++ b/support/templates/gitaly.config.toml.erb
@@ -91,6 +91,7 @@ dir = "<%= config.gitlab_shell.dir %>"
 
 [gitlab]
 url = "http+unix://<%= config.gitlab.__socket_file_escaped %>"
+relative_url_root = "<%= config.relative_url_root %>"
 
 [gitlab.http-settings]
 self_signed_cert = false
