--- a/support/templates/gitlab.yml.erb
+++ b/support/templates/gitlab.yml.erb
@@ -185,21 +185,18 @@ production: &base
 
   ## Merge request external diff storage
   external_diffs:
-    # If disabled (the default), the diffs are in-database. Otherwise, they can
-    # be stored on disk, or in object storage
-    enabled: false
-    # The location where external diffs are stored (default: shared/lfs-external-diffs).
-    # storage_path: shared/external-diffs
-    # object_store:
-    #   enabled: false
-    #   remote_directory: external-diffs
-    #   background_upload: false
-    #   proxy_download: false
-    #   connection:
-    #     provider: AWS
-    #     aws_access_key_id: AWS_ACCESS_KEY_ID
-    #     aws_secret_access_key: AWS_SECRET_ACCESS_KEY
-    #     region: us-east-1
+    enabled: <%= config.object_store? %>
+    object_store:
+      enabled: <%= config.object_store? %>
+      remote_directory: external-diffs
+      direct_upload: true
+      connection:
+        provider: AWS
+        aws_access_key_id: minio
+        aws_secret_access_key: gdk-minio
+        region: gdk
+        endpoint: 'http://<%= config.object_store.host %>:<%= config.object_store.port %>'
+        path_style: true
 
   ## Git LFS
   lfs:
