Fix gitlab-k8s-agent-config.yml.erb to have valid gitlab address

--- a/support/templates/gitlab-k8s-agent-config.yml.erb
+++ b/support/templates/gitlab-k8s-agent-config.yml.erb
@@ -3,5 +3,5 @@ listen:
   address:  <%= config.gitlab_k8s_agent.listen_address %>
   websocket: <%= config.gitlab_k8s_agent.__listen_websocket %>
 gitlab:
-  address: <%= config.workhorse.__listen_address %>
+  address: <%= config.gitlab_k8s_agent.__gitlab_address %>
   authentication_secret_file: <%= config.gitlab_k8s_agent.__secret_file %>
