Make Gitaly internal API calls go through Workhorse
In GitLab 13.5, Omnibus changed the defaults to make all Gitaly internal
API calls go through Workhorse
(https://gitlab.com/gitlab-org/omnibus-gitlab/-/merge_requests/4592). This
was done for several reasons:

1. It improves observability of API calls made by Gitaly since Workhorse
tracks how long the request was queued before processed.

2. This is now required since Gitaly may make an internal API call to download
LFS files.

We now update the GDK to reflect this behavior.

--- a/support/templates/gitaly.config.toml.erb
+++ b/support/templates/gitaly.config.toml.erb
@@ -90,8 +90,7 @@ dir = "<%= config.gdk_root.join('gitaly', 'ruby') %>"
 dir = "<%= config.gitlab_shell.dir %>"
 
 [gitlab]
-url = "http+unix://<%= config.gitlab.__socket_file_escaped %>"
-relative_url_root = "<%= config.relative_url_root %>"
+url = "<%= config.__uri %>"
 
 [gitlab.http-settings]
 self_signed_cert = false
