Fix configuration file format for new kas

--- a/support/templates/gitlab-k8s-agent-config.yml.erb
+++ b/support/templates/gitlab-k8s-agent-config.yml.erb
@@ -1,6 +1,6 @@
-listen:
+listen_agent:
   network: <%= config.gitlab_k8s_agent.listen_network %>
-  address:  <%= config.gitlab_k8s_agent.listen_address %>
+  address: <%= config.gitlab_k8s_agent.listen_address %>
   websocket: <%= config.gitlab_k8s_agent.__listen_websocket %>
 gitlab:
   address: <%= config.gitlab_k8s_agent.__gitlab_address %>
