--- a/support/templates/gitlab.yml.erb
+++ b/support/templates/gitlab.yml.erb
@@ -860,6 +860,9 @@ development:
         app_secret: '<%= config.omniauth.google_oauth2.client_secret %>',
         args: { access_type: 'offline', approval_prompt: '' } }
     <%- end -%>
+    <%- if config.omniauth.group_saml.enabled -%>
+    - { name: 'group_saml' }
+    <%- end -%>
 
   elasticsearch:
     indexer_path: <%= config.gdk_root %>/gitlab-elasticsearch-indexer/bin/gitlab-elasticsearch-indexer
